fix: Make IgnoredWhitespace toggle button visible based on IsTextDiff

--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -129,6 +129,7 @@
             <ToggleButton Classes="line_path"
                           Width="28"
                           IsChecked="{Binding IgnoreWhitespace, Mode=TwoWay}"
+                          IsVisible="{Binding IsTextDiff}"
                           ToolTip.Tip="{DynamicResource Text.Diff.IgnoreWhitespace}">
               <Path Width="14" Height="14" Stretch="Uniform" Data="{StaticResource Icons.Whitespace}"/>
             </ToggleButton>
