feat: show CommitRelationTracking on CommitGraph (#940)
- Add SHA property to the Dot class and assign commit SHA to anchor instances in the CommitGraph model.
- Add constructor to initialize commit relation tracking with repository path and commit hash, enabling querying and displaying related refs while managing loading state.
- Add pointer interaction handlers to the `CommitGraph` class for displaying commit details on click, updating cursor on hover, and resetting cursor on exit.

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -207,7 +207,7 @@
                          DotBrush="{DynamicResource Brush.Contents}"
                          OnlyHighlightCurrentBranch="{Binding $parent[v:Histories].OnlyHighlightCurrentBranch}"
                          HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                         IsHitTestVisible="False"
+                         IsHitTestVisible="True"
                          ClipToBounds="True"/>
         </Grid>
       </Grid>
