--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -37,6 +37,10 @@
   <x:String x:Key="Text.Apply.Warn" xml:space="preserve">警告</x:String>
   <x:String x:Key="Text.Apply.Warn.Desc" xml:space="preserve">应用补丁，输出关于空白符的警告</x:String>
   <x:String x:Key="Text.Apply.WS" xml:space="preserve">空白符号处理 ：</x:String>
+  <x:String x:Key="Text.ApplyStash" xml:space="preserve">应用贮藏</x:String>
+  <x:String x:Key="Text.ApplyStash.DropAfterApply" xml:space="preserve">在成功应用后丢弃该贮藏</x:String>
+  <x:String x:Key="Text.ApplyStash.RestoreIndex" xml:space="preserve">恢复索引中已暂存的变化</x:String>
+  <x:String x:Key="Text.ApplyStash.Stash" xml:space="preserve">已选贮藏 ：</x:String>
   <x:String x:Key="Text.Archive" xml:space="preserve">存档(archive) ...</x:String>
   <x:String x:Key="Text.Archive.File" xml:space="preserve">存档文件路径：</x:String>
   <x:String x:Key="Text.Archive.File.Placeholder" xml:space="preserve">选择存档文件的存放路径</x:String>
