fix: `COMMIT & PUSH` should hide when there's no remotes available (#956)
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -374,6 +374,7 @@
                 ToolTip.VerticalOffset="0">
           <Button.IsVisible>
             <MultiBinding Converter="{x:Static BoolConverters.And}">
+              <Binding Path="HasRemotes"/>
               <Binding Path="UseAmend" Converter="{x:Static BoolConverters.Not}"/>
               <Binding Path="InProgressContext" Converter="{x:Static ObjectConverters.IsNull}"/>
             </MultiBinding>
