--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -25,7 +25,7 @@
       </Grid.RowDefinitions>
       
       <!-- Unstaged -->
-      <Grid Grid.Row="0" RowDefinitions="28,*">
+      <Grid Grid.Row="0" RowDefinitions="28,36,*">
         <!-- Unstaged Toolbar -->
         <Border Grid.Row="0" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}">
           <Grid ColumnDefinitions="Auto,Auto,Auto,Auto,*,Auto,Auto,Auto,Auto,Auto">
@@ -75,15 +75,47 @@
           </Grid>
         </Border>
 
+        <!-- Unstaged Filter -->
+        <Border Grid.Row="1" BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}">
+          <TextBox Height="24"
+                   Margin="4,0"
+                   BorderThickness="1"
+                   CornerRadius="12"
+                   Text="{Binding UnstagedFilter, Mode=TwoWay}"
+                   BorderBrush="{DynamicResource Brush.Border2}"
+                   VerticalContentAlignment="Center">
+            <TextBox.InnerLeftContent>
+              <Path Width="14" Height="14"
+                    Margin="6,0,0,0"
+                    Fill="{DynamicResource Brush.FG2}"
+                    Data="{StaticResource Icons.Search}"/>
+            </TextBox.InnerLeftContent>
+
+            <TextBox.InnerRightContent>
+              <Button Classes="icon_button"
+                      Width="16"
+                      Margin="0,0,6,0"
+                      Command="{Binding ClearUnstagedFilter}"
+                      IsVisible="{Binding UnstagedFilter, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                      HorizontalAlignment="Right">
+                <Path Width="14" Height="14"
+                      Margin="0,1,0,0"
+                      Fill="{DynamicResource Brush.FG1}"
+                      Data="{StaticResource Icons.Clear}"/>
+              </Button>
+            </TextBox.InnerRightContent>
+          </TextBox>
+        </Border>
+        
         <!-- Unstaged Changes -->
-        <v:ChangeCollectionView Grid.Row="1"
+        <v:ChangeCollectionView Grid.Row="2"
                                 x:Name="UnstagedChangesView"
                                 Focusable="True"
                                 IsUnstagedChange="True"
                                 SelectionMode="Multiple"
                                 Background="{DynamicResource Brush.Contents}"
                                 ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=UnstagedChangeViewMode}"
-                                Changes="{Binding Unstaged}"
+                                Changes="{Binding VisibleUnstaged}"
                                 SelectedChanges="{Binding SelectedUnstaged, Mode=TwoWay}"
                                 ContextRequested="OnUnstagedContextRequested"
                                 ChangeDoubleTapped="OnUnstagedChangeDoubleTapped"
